--- a/Restaurant Website/Restaurant/assetsweb.css
+++ b/Restaurant Website/Restaurant/assetsweb.css
@@ -13,23 +13,23 @@ img {
 }
 
 
-.wrapper {
+.menuclass {
   display: grid;
   grid-gap: 20px;
 }
 
-.top {
+.Logo {
   display: grid;
   grid-gap: 20px;
   grid-template-areas:
-    "hero hero cta1"
-    "hero hero cta2"
+    "Pizzadang Pizzadang Pizza"
+    "Pizzadang Pizzadang Pasta"
 }
 
 .Pizzadang{
-  grid-area: pizzadang;
+  grid-area: Pizzadang;
   min-height: 400px;
-  background: white url(images/PadangPizza.jpg);
+  background: white url(https://github.com/HikariNoRyu/HCI-Project/blob/main/Restaurant%20Website/Restaurant/Images/PadangPizza.jpg?raw=true);
   background-size: cover;
   background-position: bottom right;
   padding: 50px;
@@ -75,7 +75,7 @@ img {
 
 /* Navigation */
 
-.menu ul {
+.dropdown_menu ul {
   display: grid;
   grid-gap: 10px;
   padding: 0;
@@ -83,7 +83,7 @@ img {
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
 }
 
-.menu a {
+.dropdown_menu a {
   background: var(--yellow);
   display: block;
   text-decoration: none;
@@ -100,13 +100,14 @@ img {
 
 /* Features! */
 
-.features {
+.showcase {
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  grid-template-areas:"items items items items items"
 }
 
-.feature {
+.items {
   background: white;
   padding: 10px;
   border: 1px solid white;
@@ -114,56 +115,25 @@ img {
   box-shadow: 0 0 4px  rgba(0,0,0,0.1);
 }
 
-.feature .icon {
+.items .emoji {
   font-size: 50px;
 }
-.feature p {
+.showcase p {
   color: rgba(0,0,0,0.5);
 }
 
 /* About Section */
 
 .about {
-  background: white;
+  background: #d59647;
   padding:50px;
   display: grid;
   grid-template-columns: 400px 1fr;
   align-items: center;
 }
 
-/* Gallery! */
-
-.gallery {
-  display: grid;
-  grid-gap: 20px;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-}
-
-.gallery img {
-  width: 100%;
-}
-
-.gallery h2 {
-  grid-column: 1 / -1;
-  display: grid;
-  grid-template-columns: 1fr auto 1fr;
-  grid-gap: 20px;
-  align-items: center;
-}
-
-.gallery h2:before, .gallery h2:after {
-  display: block;
-  content: '';
-  height: 10px;
-  background: linear-gradient(to var(--direction, left), var(--geen), transparent);
-}
-
-.gallery h2:after {
-  --direction: right;
-}
-
 @media (max-width: 1000px) {
-  .menu {
+  .dropdown_menu {
     perspective: 800px;
   }
   [aria-controls="menu-list"] {
@@ -171,7 +141,7 @@ img {
     margin-bottom: 10px;
   }
 
-  .menu ul {
+  .dropdown_menu ul {
     max-height: 0;
     overflow: hidden;
     transform: rotateX(90deg);
@@ -199,10 +169,11 @@ img {
 }
 
 @media (max-width: 700px) {
-  .top {
+  .Logo {
     grid-template-areas:
-      "hero hero"
-      "cta1 cta2"
+      "Pizzadang Pizzadang"
+      "Pizza"
+      "Pasta"
   }
   .about {
     grid-template-columns: 1fr;
@@ -214,10 +185,10 @@ img {
   }
 
 @media (max-width: 500px) {
-  .top {
+  .Logo {
     grid-template-areas:
-      "hero"
-      "cta1"
-      "cta2"
+      "Pizzadang"
+      "Pizza"
+      "Pasta"
   }
 }
