--- a/Restaurant Website/Restaurant/assetsweb.css
+++ b/Restaurant Website/Restaurant/assetsweb.css
@@ -9,9 +9,8 @@ button {
 }
 
 img {
-  max-width: 100%;
+  max-width: 50%;
 }
-
 
 .menuclass {
   display: grid;
@@ -73,33 +72,36 @@ img {
   font-weight: 300;
 }
 
-/* Navigation */
-
-.dropdown_menu ul {
+.dropdown_menu ul{
   display: grid;
   grid-gap: 10px;
   padding: 0;
   list-style: none;
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  background-color: #d59647;
+  min-height: 40px;
+  text-align:center;
+  font-size: 40px;
 }
 
-.dropdown_menu a {
+.dropdown_menu ul a {
   background: var(--yellow);
   display: block;
   text-decoration: none;
   padding: 10px;
   text-align: center;
-  color: var(--white);
+  color: var(--black);
   text-transform: uppercase;
   font-size: 20px;
 }
 
-[aria-controls="menu-list"] {
-  display: none;
+.dropdown_menu ul a:hover {
+  display: block;
+  color: red;
+  background: #222;
+ 
+
 }
-
-/* Features! */
-
 .showcase {
   display: grid;
   grid-gap: 20px;
@@ -113,24 +115,75 @@ img {
   border: 1px solid white;
   text-align: center;
   box-shadow: 0 0 4px  rgba(0,0,0,0.1);
+  color:black;
 }
 
 .items .emoji {
   font-size: 50px;
 }
 .showcase p {
-  color: rgba(0,0,0,0.5);
+  color: rgb(34, 34, 34);
+  text-shadow: none;
 }
 
-/* About Section */
-
 .about {
-  background: #d59647;
+  background: #d59647 url(https://www.tinostone.com/wp-content/uploads/2016/09/Marquina-closeup.jpg);
   padding:50px;
   display: grid;
   grid-template-columns: 400px 1fr;
   align-items: center;
 }
+.about_info{
+  background-color:#d59547b2;
+}
+.reserve{
+  color:red;
+  height:100px;
+}
+.Bottom{
+  float:left;
+  text-align: center;
+  color:rgb(255, 255, 255);
+}
+.Bottom_Extra{
+  float:right;
+  color:rgb(255, 255, 255);
+}
+.Bottom_Extra:hover{
+  color:rgb(0, 102, 255)
+}
+footer{
+  background-color: #d59647;
+}
+.gallery {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+.gallery img {
+  width: 100%;
+}
+
+.gallery h2 {
+  grid-column: 1 / -1;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  grid-gap: 20px;
+  align-items: center;
+}
+
+.gallery h2:before, .gallery h2:after {
+  display: block;
+  content: '';
+  height: 10px;
+  background: linear-gradient(to var(--direction, left), var(--geen), transparent);
+}
+
+.gallery h2:after {
+  --direction: right;
+}
+
 
 @media (max-width: 1000px) {
   .dropdown_menu {
@@ -144,7 +197,7 @@ img {
   .dropdown_menu ul {
     max-height: 0;
     overflow: hidden;
-    transform: rotateX(90deg);
+    transform: rotateX(180deg);
     transition: all 0.5s;
   }
 
@@ -166,9 +219,7 @@ img {
     display: none;
   }
 
-}
-
-@media (max-width: 700px) {
+@media (max-width: 500px) {
   .Logo {
     grid-template-areas:
       "Pizzadang Pizzadang"
@@ -183,12 +234,12 @@ img {
   .about_info{
       background-color: #1a202c;
   }
-
+}
 @media (max-width: 500px) {
   .Logo {
     grid-template-areas:
       "Pizzadang"
       "Pizza"
-      "Pasta"
+      "Pasta";
   }
 }
