--- a/Restaurant Website/Restaurant/assetsweb.css
+++ b/Restaurant Website/Restaurant/assetsweb.css
@@ -127,7 +127,7 @@ img {
 }
 
 .about {
-  background: #d59647 url(https://www.tinostone.com/wp-content/uploads/2016/09/Marquina-closeup.jpg);
+  background: #d59647 url(https://github.com/HikariNoRyu/HCI-Project/blob/main/Restaurant%20Website/Restaurant/Images/Black_marble.jpg?raw=true);
   padding:50px;
   display: grid;
   grid-template-columns: 400px 1fr;
