--- a/assetsweb.css
+++ b/assetsweb.css
@@ -28,7 +28,7 @@ img {
 .Pizzadang{
   grid-area: Pizzadang;
   min-height: 400px;
-  background: white url(https://github.com/HikariNoRyu/HCI-Project/blob/main/Restaurant%20Website/Restaurant/Images/PadangPizza.jpg?raw=true);
+  background: white url(https://github.com/HikariNoRyu/Focal-Point/blob/main/Images/PadangPizza.jpg?raw=true);
   background-size: cover;
   background-position: bottom right;
   padding: 50px;
@@ -127,7 +127,7 @@ img {
 }
 
 .about {
-  background: #d59647 url(https://github.com/HikariNoRyu/HCI-Project/blob/main/Restaurant%20Website/Restaurant/Images/Black_marble.jpg?raw=true);
+  background: #d59647 url(https://github.com/HikariNoRyu/Focal-Point/blob/main/Images/Black_marble.jpg?raw=true);
   padding:50px;
   display: grid;
   grid-template-columns: 400px 1fr;
